@@ -14,11 +14,18 @@ use Test::Mock::Simple;
 	use strict;
 	use warnings;
 	
-	sub new  { return bless {}, shift };
+	sub new  {
+		my $class = shift;
+		return bless [@_], $class;
+	}
+	
 	sub wait {
 		my ($self, $code) = @_;
 		
-		$code->({path => 'somefile'});
+		# not right yet
+		my $path = shift @$self;
+		warn "# path - $path ($self)\n";
+		$code->({ path => $path });
 	}
 }
 
@@ -28,22 +35,40 @@ describe "A prove watcher" => sub {
 		isa_ok($sut, 'App::Prove::Watch');
 	};
 	
-	describe "with a work dir" => sub {
+	xdescribe "with a work dir" => sub {
 		my $mock = Test::Mock::Simple->new(module => 'App::Prove::Watch');
+		
 		$mock->add(watcher  => sub {
-			return mock::watcher->new;
+			return mock::watcher->new('somefile');
 		}); 
 		
 		it "should run tests when files changes" => sub {
-			my $ran;
 			my $sut = App::Prove::Watch->new(
 				'--run' => sub { pass("Called") }
 			);
 			
+			$sut->run(1);	
+		};
+	};
+	
+	xdescribe "with ignore arguments" => sub {
+		my $mock = Test::Mock::Simple->new(module => 'App::Prove::Watch');
+		$mock->add(watcher  => sub {
+			return mock::watcher->new(qw/somefile anotherfile/);
+		}); 
+		
+		it "should ignore files it was told to ignore" => sub {
+			my $called = 0;
+			my $sut = App::Prove::Watch->new(
+				'--run'    => sub { $called++ },
+				'--ignore' => 'some.*'
+			);
+			
 			$sut->run(1);
 			
-		};
-	}
+			is($called, 2);
+		};	
+	};
 };
 
 
