@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+	- Add --ignore option to add more things to the ignore list.
+
+	- Also ignore .# files by default.  Patch from Daniel Gempesaw.
+
 0.2 Mon Dec 22 2014
 
 	- Update prereqs to require Getopt::Long 2.36 or greater.
